--- a/HomePage.html
+++ b/HomePage.html
@@ -58,16 +58,12 @@
                         <input id="myFilter" data-type="search" placeholder="Search for items..">
                     </form>
                 </li>
-<!--                <li id="filter_icon" style="width:15%">-->
-<!--                    <i class="filter_list"></i>-->
-<!--                </li>-->
             </ul>
         </div>
     </div>
 
     <!-- Promotion Slideshow -->
     <div data-role="main" class="ui-content">
-        <p id="promo_title"><b> FEATURED PROMOTIONS </b></p>
         <div id="promo_slides" class="carousel slide" data-ride="carousel">
 
             <!-- Indicators -->
@@ -75,22 +71,19 @@
                 <li data-target="#promo_slides" data-slide-to="0" class="active"></li>
                 <li data-target="#promo_slides" data-slide-to="1"></li>
                 <li data-target="#promo_slides" data-slide-to="2"></li>
-                <li data-target="#promo_slides" data-slide-to="3"></li>
+<!--                <li data-target="#promo_slides" data-slide-to="3"></li>-->
             </ul>
 
             <!-- The slideshow -->
             <div class="carousel-inner slides">
                 <div class="carousel-item active slides">
-                    <img src="images/promo1.jpg" alt="promo 1"  style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
+                    <img src="images/products.jpg" alt="promo 1"  style="max-width:600px;height:auto;">
                 </div>
                 <div class="carousel-item slides">
-                    <img src="images/1PROMO.jpg" alt="promo 2"  style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
+                    <img src="images/best%20promo.png" alt="promo 2"  style="max-width:600px;height:auto;">
                 </div>
                 <div class="carousel-item slides">
-                    <img src="images/2PROMO.png" alt="promo 3" style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
-                </div>
-                <div class="carousel-item slides">
-                    <img src="images/4PROMO.jpg" alt="promo 3" style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
+                    <img src="images/no%20fakes.PNG" alt="promo 3" style="max-width:600px;height:auto;">
                 </div>
             </div>
 
@@ -219,13 +212,51 @@
         </div>
     </div>
     </div>
+    <!-- Promotion Slideshow -->
+    <div data-role="main" class="ui-content">
+        <p id="promo_title"><b> FEATURED PROMOTIONS </b></p>
+        <div id="promo_slides" class="carousel slide" data-ride="carousel">
 
-    <!-- Grid -->
+            <!-- Indicators -->
+            <ul class="carousel-indicators">
+                <li data-target="#promo_slides" data-slide-to="0" class="active"></li>
+                <li data-target="#promo_slides" data-slide-to="1"></li>
+                <li data-target="#promo_slides" data-slide-to="2"></li>
+                <li data-target="#promo_slides" data-slide-to="3"></li>
+            </ul>
+
+            <!-- The slideshow -->
+            <div class="carousel-inner slides">
+                <div class="carousel-item active slides">
+                    <img src="images/promo1.jpg" alt="promo 1"  style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
+                </div>
+                <div class="carousel-item slides">
+                    <img src="images/1PROMO.jpg" alt="promo 2"  style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
+                </div>
+                <div class="carousel-item slides">
+                    <img src="images/2PROMO.png" alt="promo 3" style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
+                </div>
+                <div class="carousel-item slides">
+                    <img src="images/4PROMO.jpg" alt="promo 3" style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+        </div>
+    </div>
+
+<!--     Grid-->
     <div class="w3-row w3-container">
         <div data-role="main" class="ui-content">
             <p id="services_title"><b> WHAT WE OFFER </b></p>
         </div>
-        <div class="w3-col l3 m6 w3-light-blue w3-container w3-padding-16" style="color: #384aeb">
+        <div class="w3-col l3 m6 w3-light-blue w3-container w3-padding-16">
             <h3>Qulity Prodcuts</h3>
             <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
@@ -244,102 +275,6 @@
             <h3>The Best Promotions</h3>
             <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
-    </div>
-
-<!--    &lt;!&ndash;Items Tab view&ndash;&gt;-->
-<!--    <div data-role="tabs"  >-->
-<!--        <br>-->
-
-<!--        <div data-role="navbar" class="item-tabs">-->
-<!--            <ul>-->
-<!--                <li ><a href="#one" data-ajax="false">On Demand</a></li>-->
-<!--                <li><a href="#two" data-ajax="false">New Arrivals</a></li>-->
-<!--                <li><a href="#three" data-ajax="false">Promo Items</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div id="one" class="ui-body-d ui-content">-->
-
-
-<!--            <div class="widget">-->
-<!--                <ul class="widget-list" id="most-popular">-->
-<!--                    <li>-->
-<!--                        <a class="widget-list-link">-->
-<!--                            <img src="images/milk.jpeg" class="imgpromo">-->
-<!--                            Anchor 5kg Milk Powder-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                    <li>-->
-<!--                        <a class="widget-list-link">-->
-<!--                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon" style="width: 100px">-->
-<!--                            Manager #2 <span>5162 followers</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                    <li>-->
-<!--                        <a class="widget-list-link">-->
-<!--                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">-->
-<!--                            Manager #3 <span>342 followers</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                </ul>-->
-
-<!--            </div>-->
-<!--        </div>-->
-
-<!--        <div id="two" class="ui-body-d ui-content">-->
-
-
-<!--            <div class="widget">-->
-<!--                <ul class="widget-list" id="new-arrivals">-->
-<!--                    <li>-->
-<!--                        <a class="widget-list-link">-->
-<!--                            <img src="http://www.gravatar.com/avatar/5?f=y&amp;s=64&amp;d=identicon">-->
-<!--                            Designer #1 <span>481 followers</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                    <li>-->
-<!--                        <a class="widget-list-link">-->
-<!--                            <img src="http://www.gravatar.com/avatar/5?f=y&amp;s=64&amp;d=identicon">-->
-<!--                            Designer #2 <span>5162 followers</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                    <li>-->
-<!--                        <a class="widget-list-link">-->
-<!--                            <img src="http://www.gravatar.com/avatar/5?f=y&amp;s=64&amp;d=identicon">-->
-<!--                            Designer #3 <span>342 followers</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div id="three" class="ui-body-d ui-content">-->
-
-
-<!--            <div class="widget">-->
-<!--                <ul class="widget-list" id="promos">-->
-<!--                    <li>-->
-<!--                        <a class="widget-list-link">-->
-<!--                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">-->
-<!--                            Manager #1 <span>481 followers</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                    <li>-->
-<!--                        <a class="widget-list-link">-->
-<!--                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">-->
-<!--                            Manager #2 <span>5162 followers</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                    <li>-->
-<!--                        <a class="widget-list-link">-->
-<!--                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">-->
-<!--                            Manager #3 <span>342 followers</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                </ul>-->
-
-<!--            </div>-->
-<!--        </div>-->
-
-
     </div>
 
     <!-- Bottom Navigation -->
