--- a/qr.html
+++ b/qr.html
@@ -33,12 +33,12 @@
             </tr>
         </table>
     </div>
-    
+
     <section class="blog-banner-area" id="category">
 		<div class="container h-100">
 			<div class="blog-banner">
 				<div class="text-center">
-					<h1>Register</h1>
+					<h1>QR Scanner</h1>
 					<nav aria-label="breadcrumb" class="banner-breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -49,7 +49,7 @@
 			</div>
     </div>
     </section>
-    
+
     <!--Main Content-->
     <section class="login_box_area section-margin">
 		<div class="container">
@@ -58,7 +58,7 @@
 					<div class="login_box_img">
 						<div class="hover">
 							<h4>Do you have a QR sticker?</h4>
-							<p>Use your QR sricker to get a valueble coupon for amazing offers </p>
+							<p>Use your QR sricker to get a valueble coupon for amazing prize deductions </p>
 							<a class="button button-account" href="register.html">share now</a>
 						</div>
 					</div>
