--- a/loginSuccess.html
+++ b/loginSuccess.html
@@ -14,11 +14,12 @@
     <h2>Alert</h2>
     <br>
     <br>
-
+   
     <div class="alert alert-success">
-        <strong>Success!</strong> This alert box could indicate a successful or positive action.
+        <strong>Success!</strong> You have Successfully created an account
         <br>
-        <button>Close</button>
+        <br>
+        <button onclick="window.location.href='HomePage.html'" style="border-color: green; border-radius: 20%;">Close</button>
     </div>
 </div>
 
