--- a/CartPage.html
+++ b/CartPage.html
@@ -14,14 +14,33 @@
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <script src="JavaScript/products.js" async></script>
+    <script src="JavaScript/functions.js" async></script>
 
 <body>
 
 <div data-role="page" >
 
+    <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+            <a href="#">Frozen food</a>
+            <a href="#">Pharmacy</a>
+            <a onclick="window.location.href='Products.html'">Grocery</a>
+            <a href="#">Household</a>
+            <a href="#">Liqour</a>
+            <a href="#">Beverages</a>
+            <a href="#">Homeware</a>
+            <a href="#">chilled</a>
+            <a href="#">Vegitables</a>
+            <a href="#">Meat</a>
+            <a href="#">Fish</a>
+            <a href="#">Fruits</a>
+        </div>
+    </div>
     <!-- Top Navigation -->
+
     <div data-role="header" id="top_navigation" data-position="fixed">
-        <i class="fas fa-th" id="category_icon"></i>
+        <i class="fas fa-th" id="category_icon" onclick="openNav()"></i>
         <div align="center" class="logo">
             <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60" onclick="window.location.href='HomePage.html'">
             <i class="fa fa-tags" id="promotion_icon" onclick="window.location.href='Promotions.html'"></i>
@@ -167,9 +186,9 @@
 
         </div>
         <div class="main-buttons">
-        <button class="btn info" id="back-btn">Continue Shopping</button>
+        <button class="btn info" id="payment-btn" onclick="window.location.href='DeliveryPage.html'">Proceed to Pay</button>
         <br>
-        <button onclick="goBack()" class="btn warning" id="payment-btn">Back</button>
+        <button onclick="goBack()" class="btn warning"  id="back-btn">Back</button>
         </div>
     </div>
     <!-- Bottom Navigation -->
@@ -177,7 +196,7 @@
         <div data-role="navbar" id="bottom_nav">
             <ul>
                 <li id="qrcode_icon" style="width:20%">
-                    <i class="fas fa-qrcode"></i>
+                    <i class="fas fa-qrcode" onclick="window.location.href='qr.html'"></i>
                 </li>
                 <li id="cart_icon" style="width:20% ">
                     <i class="fas fa-shopping-cart" onclick="window.location.href='CartPage.html'"></i>
