--- a/DeliveryPage.html
+++ b/DeliveryPage.html
@@ -90,7 +90,7 @@
                 </fieldset>
 
                 <br>
-                <button class="btn info" id="payment-btn">Proceed Payment</button>
+                <button class="btn info" id="payment-btn" onclick="window.location.href='HomeDelivery.html'">Proceed Payment</button>
                 <br>
                 <button onclick="goBack()" class="btn warning" id="back-btn" >Back</button>
             </form>
@@ -102,7 +102,7 @@
         <div data-role="navbar" id="bottom_nav">
             <ul>
                 <li id="qrcode_icon" style="width:20%">
-                    <i class="fas fa-qrcode"></i>
+                    <i class="fas fa-qrcode" onclick="window.location.href='qr.html'"></i>
                 </li>
                 <li id="cart_icon" style="width:20% ">
                     <i class="fas fa-shopping-cart" onclick="window.location.href='CartPage.html'"></i>
