--- a/Login.html
+++ b/Login.html
@@ -96,19 +96,19 @@
         <div data-role="navbar" id="bottom_nav">
             <ul>
                 <li id="qrcode_icon" style="width:20%">
-                    <i class="fas fa-qrcode"></i>
+                    <i class="fas fa-qrcode" onclick="window.location.href='qr.html'"></i>
                 </li>
                 <li id="cart_icon" style="width:20% ">
-                    <i class="fas fa-shopping-cart"></i>
+                    <i class="fas fa-shopping-cart" onclick="window.location.href='CartPage.html'"></i>
                 </li>
                 <li id="home_icon" style="width:20%">
-                    <i class="fas fa-home"></i>
+                    <i class="fas fa-home" onclick="window.location.href='HomePage.html'"></i>
                 </li>
                 <li id="user_icon" style="width:20%">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user" onclick="window.location.href='Login.html'"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
-                    <i class="fas fa-ellipsis-v"></i>
+                    <i class="fas fa-heart heart-button" onclick="window.location.href='WishListPage.html'"></i>
                 </li>
 
             </ul>
