--- a/PaymentPage.html
+++ b/PaymentPage.html
@@ -49,7 +49,7 @@
 
         <div data-role="main" class="ui-content" >
             <form method="post" action="demoform.asp" id="form">
-                <p id="paymentMethod-title"><b>Payment Method </b></p>
+                <p id="paymentMethod-title"><b>Supported Payment Methods </b></p>
                 <table align="center">
                     <tr>
                         <td>
@@ -98,7 +98,7 @@
 
                 <br>
                 <button class="btn info" id="back-btn">Back</button>
-                <button class="btn warning" id="payment-btn">Confirm Purchase</button>
+                <button class="btn warning" id="payment-btn" onclick="window.location.href='paymentSuccess.html'">Confirm Purchase</button>
             </form>
         </div>
     </div>
@@ -108,17 +108,16 @@
         <div data-role="navbar" id="bottom_nav">
             <ul>
                 <li id="qrcode_icon" style="width:20%">
-                    <i class="fas fa-qrcode"></i>
+                    <i class="fas fa-qrcode" onclick="window.location.href='qr.html'"></i>
                 </li>
                 <li id="cart_icon" style="width:20% ">
-
-                    <i class="fas fa-shopping-cart"></i>
+                    <i class="fas fa-shopping-cart" onclick="window.location.href='CartPage.html'"></i>
                 </li>
                 <li id="home_icon" style="width:20%">
-                    <i class="fas fa-home"></i>
+                    <i class="fas fa-home" onclick="window.location.href='HomePage.html'"></i>
                 </li>
                 <li id="user_icon" style="width:20%">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user" onclick="window.location.href='MyAccountPage.html'"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
                     <i class="fas fa-heart heart-button" onclick="window.location.href='WishListPage.html'"></i>
