--- a/Promotions.html
+++ b/Promotions.html
@@ -59,9 +59,6 @@
                         <input id="myFilter" data-type="search" placeholder="Search for items..">
                     </form>
                 </li>
-                <!--                <li id="filter_icon" style="width:15%">-->
-                <!--                    <i class="fas fa-filter"></i>-->
-                <!--                </li>-->
             </ul>
         </div>
     </div>
@@ -204,7 +201,7 @@
         <div data-role="navbar" id="bottom_nav">
             <ul>
                 <li id="qrcode_icon" style="width:20%">
-                    <i class="fas fa-qrcode"></i>
+                    <i class="fas fa-qrcode" onclick="window.location.href='qr.html'"></i>
                 </li>
                 <li id="cart_icon" style="width:20% ">
                     <i class="fas fa-shopping-cart" onclick="window.location.href='CartPage.html'"></i>
