--- a/RiceProductPage.html
+++ b/RiceProductPage.html
@@ -57,9 +57,6 @@
                         <input id="myFilter" data-type="search" placeholder="Search for items..">
                     </form>
                 </li>
-                <!--                <li id="filter_icon" style="width:15%">-->
-                <!--                    <i class="fas fa-filter"></i>-->
-                <!--                </li>-->
             </ul>
         </div>
     </div>
@@ -77,7 +74,7 @@
             </div>
             <br>
             <div class="s_product_text">
-                <img class="card-img" src="images/rice.jpg" alt="" style="max-width: 380px;">
+                <img class="card-img" src="images/rice.jpg" alt="" style="max-width: 300px;">
                 <h3 class="product-title">Daawat Rice 1Kg</h3>
                 <table style="width: 100%">
                     <tr>
@@ -138,105 +135,100 @@
                         </td>
                 </table>
                 <button class="btn info shop-item-button" id="addtocart-btn">Add To Cart</button>
+
+                    <br>
+                    <button onclick="goBack()" class="btn warning" id="back-btn">Back</button>
+                </div>
             </div>
-<!--                            </td>-->
-<!--                            <td>-->
-<!--                            </td>-->
-<!--                    </table>-->
-<!--                    <button class="btn info" id="addtocart-btn">Add To Cart</button>-->
-<!--                    <br>-->
-<!--                    <button onclick="goBack()" class="btn warning" id="back-btn">Back</button>-->
-<!--                </div>-->
-            </div>
-            <div class="page-footer-class" id="page-footer-id">
-                <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-                <!-- Footer -->
-                <footer class="pt-5 pb-4" id="contact">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-3 col-md-6 col-sm-6 mt-2 mb-4">
-                                <h5 class="mb-4">ABOUT US</h5>
-                                <ul class="f-address">
-                                    <li>
-                                        <div class="row">
-                                            <div class="col-1"><i class="fas fa-map-marker"></i></div>
-                                            <div class="col-10">
-                                                <p class="mb-3">50/B,MAIN ST,COLOMBO</p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="row">
-                                            <div class="col-1"><i class="far fa-envelope"></i></div>
-                                            <div class="col-10">
-                                                <p class="mb-3">ShopMo1234@Gmail.com</p>
+<!--            <div class="page-footer-class" id="page-footer-id">-->
+<!--                <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">-->
+<!--                &lt;!&ndash; Footer &ndash;&gt;-->
+<!--                <footer class="pt-5 pb-4" id="contact">-->
+<!--                    <div class="container">-->
+<!--                        <div class="row">-->
+<!--                            <div class="col-lg-3 col-md-6 col-sm-6 mt-2 mb-4">-->
+<!--                                <h5 class="mb-4">ABOUT US</h5>-->
+<!--                                <ul class="f-address">-->
+<!--                                    <li>-->
+<!--                                        <div class="row">-->
+<!--                                            <div class="col-1"><i class="fas fa-map-marker"></i></div>-->
+<!--                                            <div class="col-10">-->
+<!--                                                <p class="mb-3">50/B,MAIN ST,COLOMBO</p>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </li>-->
+<!--                                    <li>-->
+<!--                                        <div class="row">-->
+<!--                                            <div class="col-1"><i class="far fa-envelope"></i></div>-->
+<!--                                            <div class="col-10">-->
+<!--                                                <p class="mb-3">ShopMo1234@Gmail.com</p>-->
 
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="row">
-                                            <div class="col-1"><i class="fas fa-phone-volume"></i></div>
-                                            <div class="col-10">
-                                                <p class="mb-3">+94 77 605 3412</p>
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </li>-->
+<!--                                    <li>-->
+<!--                                        <div class="row">-->
+<!--                                            <div class="col-1"><i class="fas fa-phone-volume"></i></div>-->
+<!--                                            <div class="col-10">-->
+<!--                                                <p class="mb-3">+94 77 605 3412</p>-->
 
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-lg-3 col-md-6 col-sm-6 mt-2 mb-4">
-                                <h5 class="mb-4">SERVICES</h5>
-                                <p class="mb-3">DELIVERY AND RETURNS</p>
-                                <p class="mb-3">PRIVACY POLICY</p>
-                                <p class="mb-3">TERMS AND CONDITIONS</p>
-                            </div>
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </li>-->
+<!--                                </ul>-->
+<!--                            </div>-->
+<!--                            <div class="col-lg-3 col-md-6 col-sm-6 mt-2 mb-4">-->
+<!--                                <h5 class="mb-4">SERVICES</h5>-->
+<!--                                <p class="mb-3">DELIVERY AND RETURNS</p>-->
+<!--                                <p class="mb-3">PRIVACY POLICY</p>-->
+<!--                                <p class="mb-3">TERMS AND CONDITIONS</p>-->
+<!--                            </div>-->
 
-                            <div class="col-lg-3 col-md-6 col-sm-6 mt-2 mb-4">
-                                <h5 class="mb-4">INFORMATION</h5>
-                                <p class="mb-3">ABOUT US</p>
-                                <p class="mb-3">CONTACT US</p>
-                                <p class="mb-3">SHOPMO ON MOBILE</p>
-                            </div>
+<!--                            <div class="col-lg-3 col-md-6 col-sm-6 mt-2 mb-4">-->
+<!--                                <h5 class="mb-4">INFORMATION</h5>-->
+<!--                                <p class="mb-3">ABOUT US</p>-->
+<!--                                <p class="mb-3">CONTACT US</p>-->
+<!--                                <p class="mb-3">SHOPMO ON MOBILE</p>-->
+<!--                            </div>-->
 
-                            <div class="col-lg-3 col-md-6 col-sm-6 mt-2 mb-4">
-                                <h5 class="mb-4">CONNECT WITH US</h5>
-                                <div class="input-group">
-                                    <img src="images/shopmologo.png" width="50%"  style="margin-left: 70px">
-                                </div>
-                                <ul class="social-pet mt-4">
-                                    <li><a href="#" title="facebook"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="#" title="google-plus"><i class="fab fa-google-plus-g"></i></a></li>
-                                    <li><a href="#" title="twitter"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#" title="instagram"><i class="fab fa-instagram"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </footer>
-                <!-- Copyright -->
-                <section class="copyright">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-12 ">
-                                <div class="text-center text-white">
-                                    &copy; 2019 ShopMo. All Rights Reserved.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-            </div>
-        </div>
-    </div>
- </div>
-    </div>
+<!--                            <div class="col-lg-3 col-md-6 col-sm-6 mt-2 mb-4">-->
+<!--                                <h5 class="mb-4">CONNECT WITH US</h5>-->
+<!--                                <div class="input-group">-->
+<!--                                    <img src="images/shopmologo.png" width="50%"  style="margin-left: 70px">-->
+<!--                                </div>-->
+<!--                                <ul class="social-pet mt-4">-->
+<!--                                    <li><a href="#" title="facebook"><i class="fab fa-facebook-f"></i></a></li>-->
+<!--                                    <li><a href="#" title="google-plus"><i class="fab fa-google-plus-g"></i></a></li>-->
+<!--                                    <li><a href="#" title="twitter"><i class="fab fa-twitter"></i></a></li>-->
+<!--                                    <li><a href="#" title="instagram"><i class="fab fa-instagram"></i></a></li>-->
+<!--                                </ul>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </footer>-->
+<!--                &lt;!&ndash; Copyright &ndash;&gt;-->
+<!--                <section class="copyright">-->
+<!--                    <div class="container">-->
+<!--                        <div class="row">-->
+<!--                            <div class="col-md-12 ">-->
+<!--                                <div class="text-center text-white">-->
+<!--                                    &copy; 2019 ShopMo. All Rights Reserved.-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </section>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!-- </div>-->
+<!--    </div>-->
 <!-- Bottom Navigation -->
 <div data-role="footer" style="text-align:center;" data-position="fixed">
     <div data-role="navbar" id="bottom_nav">
         <ul>
             <li id="qrcode_icon" style="width:20%">
-                <i class="fas fa-qrcode"></i>
+                <i class="fas fa-qrcode" onclick="window.location.href='qr.html'"></i>
             </li>
             <li id="cart_icon" style="width:20% ">
                 <i class="fas fa-shopping-cart" onclick="window.location.href='CartPage.html'"></i>
