--- a/qr.html
+++ b/qr.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="Style/qr.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
 <body>
 <div data-role="page" id="pageone">
     <div align="center" class="header">
-        <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60">
+        <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60" onclick="window.location.href='HomePage.html'">
     </div>
     <!--Top Banner-->
     <div class="banner">
@@ -112,23 +112,23 @@
             </script>
 
     <!-- Bottom Navigation -->
-    <div data-role="footer"  data-position="fixed">
+    <div data-role="footer" style="text-align:center;" data-position="fixed">
         <div data-role="navbar" id="bottom_nav">
             <ul>
                 <li id="qrcode_icon" style="width:20%">
-                    <i class="fas fa-qrcode"></i>
+                    <i class="fas fa-qrcode" onclick="window.location.href='qr.html'"></i>
                 </li>
                 <li id="cart_icon" style="width:20% ">
-                    <i class="fas fa-shopping-cart"></i>
+                    <i class="fas fa-shopping-cart" onclick="window.location.href='CartPage.html'"></i>
                 </li>
                 <li id="home_icon" style="width:20%">
-                    <i class="fas fa-home"></i>
+                    <i class="fas fa-home" onclick="window.location.href='HomePage.html'"></i>
                 </li>
                 <li id="user_icon" style="width:20%">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user" onclick="window.location.href='Login.html'"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
-                    <i class="fas fa-ellipsis-v"></i>
+                    <i class="fas fa-heart heart-button" onclick="window.location.href='WishListPage.html'"></i>
                 </li>
 
             </ul>
