--- a/WishListPage.html
+++ b/WishListPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-    <link rel="stylesheet" href="Style/cartpage_style.css">
+    <link rel="stylesheet" href="Style/wishlist.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -49,104 +49,7 @@
         <p id="cart-title"><b>Wish List</b></p>
         <div class="fav-items">
 
-        <!--<div class="card c1">-->
-            <!--<table>-->
-                <!--<col width="80">-->
-                <!--<col width="100">-->
-                <!--<col width="60">-->
-                <!--<tr>-->
-                    <!--<td class="product-image-td">-->
-                        <!--<img src="images/rice.jpg" alt="Rice" style="width:100%">-->
-                    <!--</td>-->
-                    <!--<td class="product-data-td">-->
-                        <!--<p class="product-title"><b>Rice </b></p>-->
-                        <!--<p class="product-price">LKR 500</p>-->
-                        <!--<div class="star-rating">-->
 
-                            <!--<span class="fa fa-star checked"></span>-->
-                            <!--<span class="fa fa-star checked"></span>-->
-                            <!--<span class="fa fa-star checked"></span>-->
-                            <!--<span class="fa fa-star unchecked"></span>-->
-                            <!--<span class="fa fa-star unchecked"></span>-->
-                        <!--</div>-->
-                        <!--&lt;!&ndash;<p id="product-desc"><b>400g </b></p>&ndash;&gt;-->
-                    <!--</td>-->
-
-                    <!--<td class="wishlist-icons">-->
-                        <!--<div class="card_area">-->
-                            <!--<a id="heart_btn1" href="#"><i class="fas fa-heart fa-2x"></i></a>-->
-                        <!--</div>-->
-
-                    <!--</td>-->
-                    <!--</td>-->
-                <!--</tr>-->
-            <!--</table>-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--<div class="card c2">-->
-            <!--<table>-->
-                <!--<col width="80">-->
-                <!--<col width="100">-->
-                <!--<col width="60">-->
-                <!--<tr>-->
-                    <!--<td class="product-image-td">-->
-                        <!--<img src="images/kitkat.jpg" alt="KitKat" style="width:100%">-->
-                    <!--</td>-->
-                    <!--<td class="product-data-td">-->
-                        <!--<p class="product-title"><b>KitKat </b></p>-->
-                        <!--<p class="product-price">LKR 600</p>-->
-
-                        <!--<div class="star-rating">-->
-
-                            <!--<span class="fa fa-star checked"></span>-->
-                            <!--<span class="fa fa-star checked"></span>-->
-                            <!--<span class="fa fa-star checked"></span>-->
-                            <!--<span class="fa fa-star checked"></span>-->
-                            <!--<span class="fa fa-star checked"></span>-->
-                        <!--</div>-->
-                        <!--&lt;!&ndash;<p id="product-desc"><b>400g </b></p>&ndash;&gt;-->
-                    <!--</td>-->
-
-                    <!--<td class="wishlist-icons">-->
-                        <!--<div class="card_area">-->
-                            <!--<a id="heart_btn2" href="#"><i class="fas fa-heart fa-2x"></i></a>-->
-                        <!--</div>-->
-                    <!--</td>-->
-                <!--</tr>-->
-            <!--</table>-->
-        <!--</div>-->
-
-        <!--<div class="card c3">-->
-            <!--<table>-->
-                <!--<col width="80">-->
-                <!--<col width="100">-->
-                <!--<col width="60">-->
-                <!--<tr>-->
-                    <!--<td class="product-image-td">-->
-                        <!--<img src="images/milk.jpeg" alt="Milk" style="width:100%">-->
-                    <!--</td>-->
-                    <!--<td class="product-data-td">-->
-                        <!--<p class="product-title"><b>Milk </b></p>-->
-                        <!--<p class="product-price">LKR 800</p>-->
-
-                        <!--<div class="star-rating">-->
-
-                            <!--<span class="fa fa-star checked"></span>-->
-                            <!--<span class="fa fa-star checked"></span>-->
-                            <!--<span class="fa fa-star unchecked"></span>-->
-                            <!--<span class="fa fa-star unchecked"></span>-->
-                            <!--<span class="fa fa-star unchecked"></span>-->
-                        <!--</div>-->
-                        <!--&lt;!&ndash;<p id="product-desc"><b>400g </b></p>&ndash;&gt;-->
-                    <!--</td>-->
-
-                    <!--<td class="wishlist-icons">-->
-                        <!--<div class="card_area">-->
-                            <!--<a id="heart_btn3" href="#"><i class="fas fa-heart fa-2x"></i></a>-->
-                        <!--</div>-->
-                    <!--</td>-->
-                <!--</tr>-->
-            <!--</table>-->
 
         </div>
         <div>
