cart page and wish list functionality

--- a/Products.html
+++ b/Products.html
@@ -77,7 +77,7 @@
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
                                 <img class="card-img" src="images/rice.jpg" alt="" onclick="window.location.href='RiceProductPage.html'">
-                                <!--<span class="product-id">992</span>-->
+                                <span class="product-id">992</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -121,7 +121,7 @@
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
                                 <img class="card-img" src="images/milk.jpeg" alt="">
-                                <!--<span class="product-id">993</span>-->
+                                <span class="product-id">993</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -165,7 +165,7 @@
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
                                 <img class="card-img" src="images/noodles.jpg" alt="">
-                                <!--<span class="product-id">994</span>-->
+                                <span class="product-id">994</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -209,7 +209,7 @@
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
                                 <img class="card-img" src="images/pringles.jfif" alt="">
-                                <!--<span class="product-id">995</span>-->
+                                <span class="product-id">995</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -253,7 +253,7 @@
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
                                 <img class="card-img" src="images/sugar.jpg" alt="">
-                                <!--<span class="product-id">996</span>-->
+                                <span class="product-id">996</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -297,7 +297,7 @@
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
                                 <img class="card-img" src="images/sauce.jpg" alt="">
-                                <!--<span class="product-id">997</span>-->
+                                <span class="product-id">997</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -341,7 +341,7 @@
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
                                 <img class="card-img" src="images/chili.jfif" alt="">
-                                <!--<span class="product-id">998</span>-->
+                                <span class="product-id">998</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -385,7 +385,7 @@
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
                                 <img class="card-img" src="images/kitkat.jpg" alt="">
-                                <!--<span class="product-id">999</span>-->
+                                <span class="product-id">999</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
