--- a/RiceProductPage.html
+++ b/RiceProductPage.html
@@ -76,11 +76,13 @@
             <div class="s_product_text">
                 <img class="card-img" src="images/rice.jpg" alt="" style="max-width: 300px;">
                 <h3 class="product-title">Daawat Rice 1Kg</h3>
+                <span class="product-id">992</span>
                 <table style="width: 100%">
                     <tr>
                         <td>
                             <h4 class="promo-item-text">LKR 500.00</h4>
-                            <h3 class="discount">10%</h3>
+                            <p class ="promo-off">10% Off</p>
+
                         </td>
                         <td>
                             <div align="right">
@@ -94,7 +96,7 @@
 
                 <p id="category-text"><span>Category</span> : Grocery</a></p>
                 <p id="availability-text"><span>Availibility</span> : In Stock</a></p>
-                <br>
+
                 <p>Mill Oil is an innovative oil filled radiator with the most modern technology. If you are looking
                     for
                     something that can make your interior look awesome, and at the same time give you the pleasant
@@ -135,7 +137,8 @@
                         </td>
                 </table>
                 <button class="btn info shop-item-button" id="addtocart-btn">Add To Cart</button>
-
+                </div>
+            </div>
                     <br>
                     <button onclick="goBack()" class="btn warning" id="back-btn">Back</button>
                 </div>
